--- a/caretaker/styles.css
+++ b/caretaker/styles.css
@@ -1,38 +1,28 @@
-body {
-  background-color: black; 
-}
 * {
   font-family: 'Gabarito', sans-serif;
-  color: white; 
 }
 .div-to-center {
   display: flex; 
   justify-content: center; 
 }
 .the-paragraph {
-  display: inline-block; 
   font-size: 20px; 
-  background-color: green;
-  border-radius: 5px; 
-  cursor: pointer; 
-  transition: background-color 0.1s; 
-}
-.the-paragraph:hover {
-  background-color: rgb(243, 68, 14);
-}
-.everything {
-  display: grid;
-  grid-template-columns: 1fr 2fr; 
-}
-.texts {
-  border-left-style: solid; 
-  padding: 20px; 
 }
 .calendar,
 .time-input,
 .pill-name {
   font-size: 18px; 
   color: black; 
+}
+
+.everything {
+  display: grid;
+  grid-template-columns: 1fr 2fr; 
+}
+
+.texts {
+  border-left-style: solid; 
+  padding: 20px; 
 }
 
 .registered-dates {
@@ -117,7 +107,6 @@ html {
   cursor: pointer; 
   font-size: 35px; 
 }
-
 .readings {
   margin-bottom: 20px; 
 }
@@ -137,69 +126,14 @@ html {
 .registered-date:hover {
   background-color: rgb(243, 68, 14); 
 }
-/*
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 24px;
-  margin-left: 20px; 
+
+table {
+  border-collapse: collapse;
+  width: 100%;
 }
 
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+td, th {
+  border: 1px solid #070606;
+  text-align: left;
+  padding: 8px;
 }
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 16px;
-  width: 16px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-.wbv {
-  display: flex; 
-  align-items: center; 
-  margin-top: 50px; 
-}
-*/
